# ai-team-platform

./: .env.example  .gitignore  Dockerfile  README.md  config.py  docker-compose.yml  pyproject.toml
agents/: __init__.py  content_writer.py  email_marketer.py  seo_optimizer.py  support_chatbot.py
api/: auth.py  main.py
api/routes/: agents.py  chat.py
core/: base_agent.py  ingestion.py  qa_pipeline.py
db/: models.py  session.py
db/migrations/: env.py
frontend/: next.config.js  package-lock.json  package.json  tailwind.config.ts
frontend/src/app/: globals.css  layout.tsx
frontend/src/app/agents/: page.tsx
frontend/src/app/analytics/: page.tsx
frontend/src/app/chatbot/: page.tsx
frontend/src/app/dashboard/: page.tsx
frontend/src/app/settings/: page.tsx
frontend/src/components/: Sidebar.tsx
frontend/src/lib/: api.ts
prompts/: content_writer.yaml  email_marketer.yaml  seo_optimizer.yaml  support_chatbot.yaml
tests/: test_content_writer.py  test_email_marketer.py  test_seo_optimizer.py  test_support_chatbot.py
ui/: app.py
